<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_bmi" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_daily_caloric_requirement" />

    <item
        android:id="@+id/nav_shopping_list"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/shopping_list" />

    <item
        android:id="@+id/nav_bmi_chart"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/bmi_chart" />

</menu>