...
    <string name="your_weight">Your weight [kg]</string>
    <string name="your_height">Your height [cm]</string>
    <string name="your_age">Your age [years]</string>
    <string name="your_activity_level">Your activity level</string>
    <string name="your_sex">Man/Woman</string>
    <string name="bmi_underweight">Underweight</string>
    <string name="bmi_optimal">Optimal</string>
    <string name="bmi_overweight">Overweight</string>
    <string name="bmi_obesity">Obesity</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_bmi">BMI</string>
    <string name="bmi_chart">Wykres Bmi</string>
...
